# OCP10

./: README.md  pyproject.toml  readme.MD
softdeskAPI/softdeskAPI/: db.sqlite3  manage.py  readme.MD
softdeskAPI/softdeskAPI/projects/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
softdeskAPI/softdeskAPI/projects/migrations/: 0001_initial.py  0002_rename_created_at_project_created_time.py  0003_alter_contributor_unique_together.py
softdeskAPI/softdeskAPI/softdeskAPI/: asgi.py  settings.py  urls.py  wsgi.py
softdeskAPI/softdeskAPI/users/: models.py  serializers.py  urls.py  views.py
softdeskAPI/softdeskAPI/users/migrations/: 0001_initial.py  0002_userconsent_date_of_birth.py  0003_user_remove_userconsent_date_of_birth.py  0004_alter_userconsent_user.py  0005_alter_userconsent_user.py  0006_alter_userconsent_user.py  0007_userconsent_date_of_birth_alter_userconsent_user_and_more.py  0008_remove_userconsent_date_of_birth_userprofile.py  0009_userdata_delete_userprofile.py  0010_user_alter_userconsent_user.py  0011_alter_userconsent_user_delete_user.py  0012_userconsent_can_be_contacted_and_more.py
